--- a/AEDMap/Info.plist
+++ b/AEDMap/Info.plist
@@ -43,7 +43,10 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationPortraitUpsideDown</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+        <key>NSLocationWhenInUseUsageDescription</key>
+        <string>test</string>
 </dict>
 </plist>
